Manifest/apps/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: welcome-deployment
  namespace: be-welcome-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: welcome-service
  template:
    metadata:
      name: welcome-service
      labels:
        app: welcome-service
    spec:
      containers:
        - name: welcome-services-container
          image: nvlannasik/welcome:release-0.0.2
          ports:
            - containerPort: 5000
          resources:
            limits:
              memory: 256Mi
              cpu: 200m
            requests:
              memory: 128Mi
              cpu: 100m
