Manifest/apps/service.yml
apiVersion: v1
kind: Service
metadata:
  name: welcome-service-svc
  namespace: be-welcome-service
spec:
  selector:
    app: welcome-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
