Manifest/apps/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: be-welcome-service
  name: welcome-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - welcome.annasik.my.id
      secretName: welcome-tls
  rules:
    - host: welcome.annasik.my.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: welcome-service-svc
                port:
                  number: 8000
